# lox

./: Makefile  README.md
.github/workflows/: test.yaml
golox/: .gitignore  go.mod  go.sum  main.go
golox/internal/ast/: ast-printer.go  expr.go  expr_gen.go  stmt.go
golox/internal/globals/: globals.go
golox/internal/interpreter/: callable.go  (+5 more)
golox/tests/: create-expected-outputs.go  integration_test.go
rslox/: .gitignore  Cargo.toml  Makefile
rslox/bench/: README.md
rslox/src/: chunk.rs  compiler.rs  error.rs  main.rs  object.rs  scanner.rs  value.rs  vm.rs
rslox/src/object/: class.rs  closure.rs  function.rs  mod.rs  native-function.rs  string.rs
rslox/tests/: create-fixture-outs.rs  intergration.rs
rslox/tests/fixtures/: basic.lox  basic.out  bound-method-eq.out  callable-field.lox  callable-field.out  class_init.lox  class_init.out  classes.lox  classes.out  closures.lox  closures.out  error-concat-not-string.lox  error-concat-not-string.out  error-get-prop-on-not-obj.lox  error-get-prop-on-not-obj.out  error-invalid-assign-target.lox  error-invalid-assign-target.out  error-invalid-superclass.out  error-return-from-init.lox  error-return-from-init.out  error-set-prop-on-not-obj.lox  error-set-prop-on-not-obj.out  error-synchronize.lox  error-synchronize.out  error-this-outside-method.lox  error-this-outside-method.out  error-undefined-var.lox  error-undefined-var.out  funcs.lox  funcs.out  ifs.lox  ifs.out  logical.lox  logical.out  loops.lox  loops.out  methods.lox  methods.out  minimal.out  netest_closure.out  (+9 more)
test/origin/: .gitignore  test.sh
(+37 files in other folders)
